edit russian papers

--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -522,8 +522,6 @@ yatest () {
 }
 {% endhighlight %}
 
-<p>But autocomplete for <code>yaourt -Ss</code> <a href="https://github.com/zsh-users/zsh-completions/pull/205" title="Issue">will require</a> root privileges.</p>
-
 <h2><a href="#variables" class="anchor" name="variables"><span class="octicon octicon-link"></span></a>Variables</h2>
 <p>It is recommended to set own variables in <code>~/.zshenv</code>. But I have everything stored in the single file.</p>
 
@@ -558,4 +556,4 @@ hash -d u2=/mnt/usbdev
 </p>
 
 <h2><a href="#file" class="anchor" name="file"><span class="octicon octicon-link"></span></a>File</h2>
-<p><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc" title="GitHub">Here is</a> my <code>.zshrc</code>.</p>
+<p><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc" title="GitHub" type="text/plain">Here is</a> my <code>.zshrc</code>.</p>
