--- a/_posts/2014-05-07-my-desktop.html
+++ b/_posts/2014-05-07-my-desktop.html
@@ -43,22 +43,22 @@ description: Here is a short paper devoted to the set of applications and extens
 
 
 <h2><a href="#kde" class="anchor" name="kde"><span class="octicon octicon-link"></span></a>KDE settings</h2>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "KDE screenshot" %}
   {% assign scrname = "kde" %}
   {% include prj_scr.html %}
-</p>
+</div>
 
-<p>QtCurve is used as Qt style, its settings may be found <a href="https://github.com/arcan1s/dotfiles/tree/master/qtcurve" title="GitHub">here</a>, window decorations are presented by QtCurve too. Cursor theme is <a href="http://kde-look.org/content/show.php/Ecliz?content=110340" title="kde-look">ecliz-small</a>. Plasma theme is <a href="http://kde-look.org/content/show.php/Volatile?content=128110" title="kde-look">volatile</a>. Icon pack is  <a href="http://nitrux.in/" title="Nitrux Homepage">compass</a>. I use fonts which are based on Liberation.</p>
+<p>QtCurve is used as Qt style, its settings may be found <a href="https://github.com/arcan1s/dotfiles/tree/master/qtcurve" title="GitHub">here</a>, window decorations are presented by QtCurve too. Cursor theme is <a href="http://kde-look.org/content/show.php/Ecliz?content=110340" title="Cursor Homepage">ecliz-small</a>. Plasma theme is <a href="http://kde-look.org/content/show.php/Volatile?content=128110" title="Theme Homepage">volatile</a>. Icon pack is  <a href="http://nitrux.in/" title="Nitrux Homepage">compass</a>. I use fonts which are based on Liberation.</p>
 
 <p><b>Used widgets</b> (from left to right, top to bottom) are: <a href="https://launchpad.net/plasma-widget-menubar" title="Widget Homepage">menubar</a>, <a href="http://userbase.kde.org/Homerun" title="Widget Homepage">homerun</a> with transparent icon, <a href="http://kde-apps.org/content/show.php?content=144808" title="Widget Homepage">icontask</a>, <a href="/projects/netctl-gui/" title="Widget Homepage">netctl</a>, default KDE tray, <a href="http://agateau.com/projects/colibri/" title="Widget Homepage">colibri</a> for notifications, <a href="/projects/pytextmonitor" title="Widget Homepage">pytextmonitor</a>.</p>
 
 <p>As a bonus material <a href="https://github.com/arcan1s/dotfiles/blob/master/themes/yakuake/My%20color.colorscheme" title="GitHub">here</a> is a settings for konsole bright colors.</p>
-<p>
+<div class="thumbnails">
   {% assign scrdesc = "Zsh demonstation" %}
   {% assign scrname = "zshrc_demo" %}
   {% include prj_scr.html %}
-</p>
+</div>
 
 <h2><a href="#firefox" class="anchor" name="firefox"><span class="octicon octicon-link"></span></a>Firefox settings</h2>
 <p>I do not use a special settings, thus I get you a list of used add-ons:</p>
