--- a/ru/_posts/2014-04-18-loveless.html
+++ b/ru/_posts/2014-04-18-loveless.html
@@ -8,25 +8,27 @@ title: Loveless
 short: loveless
 description: На правах оффтопа, небольшая поэма из Final Fantasy VII Crisis Core.
 ---
-<h2><a name="prologue" class="anchor" href="#prologue"><span class="octicon octicon-link"></span></a>Prologue</h2>
-<p>
-When the war of the beasts brings about the world's end<br>
+<h2><a href="#prologue" class="anchor" name="prologue"><span class="octicon octicon-link"></span></a>Prologue</h2>
+<p>When the war of the beasts brings about the world's end<br>
 The goddess descends from the sky<br>
 Wings of light and dark spread afar<br>
 She guides us to bliss, her gift everlasting.</p>
-<h2><a name="acti" class="anchor" href="#acti"><span class="octicon octicon-link"></span></a>Act I</h2>
+
+<h2><a href="#acti" class="anchor" name="acti"><span class="octicon octicon-link"></span></a>Act I</h2>
 <p>Infinite in mystery is the gift of the Goddess<br>
 We seek it thus, and take to the sky<br>
 Ripples form on the water's surface<br>
 The wandering soul knows no rest.</p>
-<h2><a name="actii" class="anchor" href="#actii"><span class="octicon octicon-link"></span></a>Act II</h2>
+
+<h2><a href="#actii" class="anchor" name="actii"><span class="octicon octicon-link"></span></a>Act II</h2>
 <p>There is no hate, only joy<br>
 For you are beloved by the goddess<br>
 Hero of the dawn, Healer of worlds<br>
 Dreams of the morrow hath the shattered soul<br>
 Pride is lost<br>
 Wings stripped away, the end is nigh.</p>
-<h2><a name="actiii" class="anchor" href="#actiii"><span class="octicon octicon-link"></span></a>Act III</h2>
+
+<h2><a href="#actiii" class="anchor" name="actiii"><span class="octicon octicon-link"></span></a>Act III</h2>
 <p>My friend, do you fly away now?<br>
 To a world that abhors you and I?<br>
 All that awaits you is a somber morrow<br>
@@ -35,7 +37,8 @@ My friend, your desire<br>
 Is the bringer of life, the gift of the goddess<br>
 Even if the morrow is barren of promises<br>
 Nothing shall forestall my return.</p>
-<h2><a name="activ" class="anchor" href="#activ"><span class="octicon octicon-link"></span></a>Act IV</h2>
+
+<h2><a href="#activ" class="anchor" name="activ"><span class="octicon octicon-link"></span></a>Act IV</h2>
 <p>My friend, the fates are cruel<br>
 There are no dreams, no honor remains<br>
 The arrow has left, the bow of the goddess<br>
@@ -46,7 +49,8 @@ And your eternal slumber<br>
 Legend shall speak<br>
 Of sacrifice at world's end<br>
 The wind sails over the water's surface.</p>
-<h2><a name="actv" class="anchor" href="#actv"><span class="octicon octicon-link"></span></a>Act V</h2>
+
+<h2><a href="#actv" class="anchor" name="actv"><span class="octicon octicon-link"></span></a>Act V</h2>
 <p>Even if the morrow is barren of promises<br>
 Nothing shall forestall my return<br>
 To become the dew that quenches the land<br>
