--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -42,8 +42,7 @@ domain.name.           912     IN      A       192.30.252.154
 /home/arcanis/share.fs                      /srv/ftp/share  ext4    defaults,rw   0 0
 {% endhighlight %}
 
-Login on special user and option <code>anon_world_readable_only=YES</code> are used for prevent access to the music directory.
-Also here is my <code>/etc/vsftpd.conf</code> configuration file:
+Login on special user and option <code>anon_world_readable_only=YES</code> are used for prevent access to the music directory. Also here is my <code>/etc/vsftpd.conf</code> configuration file:
 
 {% highlight bash %}
 anonymous_enable=YES
