--- a/ru/_posts/2014-01-21-building-qutim-using-qt5.html
+++ b/ru/_posts/2014-01-21-building-qutim-using-qt5.html
@@ -6,30 +6,36 @@ layout: paper
 tags: archlinux, linux, сборка, qutim
 title: Сборка Qutim с Qt5
 short: building-qutim-using-qt5
-description: Если кто-то не знает, <a href="http://qutim.org">Qutim</a> - мультипротокольный кросс-платформенный месседжер. Написан он на <code>CPP</code> с использованием библиотек Qt. Проект активно развивается. В этой статье речь пойдет о реализации сборки данного пакета в Archlinux с использованием библиотек Qt5 (а не Qt4, как это делают текущие пакеты в AUR).
+description: Если кто-то не знает, <a href="http://qutim.org" title="Домашняя страница Qutim">Qutim</a> - мультипротокольный кросс-платформенный месседжер. Написан он на <code>CPP</code> с использованием библиотек Qt. Проект активно развивается. В этой статье речь пойдет о реализации сборки данного пакета в Archlinux с использованием библиотек Qt5 (а не Qt4, как это делают текущие пакеты в AUR).
 ---
-<h2><a name="problems" class="anchor" href="#problems"><span class="octicon octicon-link"></span></a>Что не так?</h2>
-<p>Да все так. Просто пакет использует для сборки систему <a href="http://qt-project.org/wiki/qbs">qbs</a>, которая, на мой взгляд, немного странная. Пакет, необходимый для сборки, <a href="https://aur.archlinux.org/packages/qbs-git/">находится в AUR</a> (рекомендую git-версию). Когда я спросил у Andrea Scarpino (который сопровождает все KDE и Qt пакеты в официальные репозитории) по поводу переноса этого пакета в репозитории, он ответил, что всему свое время. В принципе, я с ним согласен, так как проект, судя по всему, еще немного сыроват.</p>
+<h2><a href="#problems" class="anchor" name="problems"><span class="octicon octicon-link"></span></a>Что не так?</h2>
+<p>Да все так. Просто пакет использует для сборки систему <a href="http://qt-project.org/wiki/qbs" title="Wiki">qbs</a>, которая, на мой взгляд, немного странная. Пакет, необходимый для сборки, <a href="https://aur.archlinux.org/packages/qbs-git/" title="AUR">находится в AUR</a> (рекомендую git-версию). Когда я спросил у Andrea Scarpino (который сопровождает все KDE и Qt пакеты в официальные репозитории) по поводу переноса этого пакета в репозитории, он ответил, что всему свое время. В принципе, я с ним согласен, так как проект, судя по всему, еще немного сыроват.</p>
 
-<h2><a name="prepare" class="anchor" href="#prepare"><span class="octicon octicon-link"></span></a>Подготовка</h2>
+<h2><a href="#prepare" class="anchor" name="prepare"><span class="octicon octicon-link"></span></a>Подготовка</h2>
 <p>Установим зависимости. Что-то может быть пропустил, зависимости сканировал с использованием <code>namcap</code>:</p>
+
 {% highlight bash %}
 pacman -Sy --asdeps clang git libc++abi qt5-quick1 qt5-x11extras
 yaourt -S --asdeps jreen-git qbs-git
 {% endhighlight %}
 
-<h3><a name="qbs" class="anchor" href="#qbs"><span class="octicon octicon-link"></span></a>Настройка qbs</h3>
-<p>Желающие могут почитать документацию <a href="http://qt-project.org/wiki/qbs">по ссылке</a> или посмотреть примеры (включены в пакет). Загвоздка в том, что эта штука использует файл настроек, который, во-первых, нужно сначала сгенерировать, во-вторых, хранится в домашней директории (и только там). В теории, генерация файла настроек (<code>~/.config/QtProject/qbs.conf</code>) происходит следующим образом:</p>
+<h3><a href="#qbs" class="anchor" name="qbs"><span class="octicon octicon-link"></span></a>Настройка qbs</h3>
+<p>Желающие могут почитать документацию <a href="http://qt-project.org/wiki/qbs" title="Wiki">по ссылке</a> или посмотреть примеры (включены в пакет). Загвоздка в том, что эта штука использует файл настроек, который, во-первых, нужно сначала сгенерировать, во-вторых, хранится в домашней директории (и только там). В теории, генерация файла настроек (<code>~/.config/QtProject/qbs.conf</code>) происходит следующим образом:</p>
+
 {% highlight bash %}
 qbs-setup-qt --detect
 qbs-detect-toolchains
 {% endhighlight %}
+
 <p>Сначала находим Qt для сборки, потом находим инструментарий (компиляторы, например). Дальше вставляем инструментарий (например, нам для Qutim нужен <code>clang</code>) в Qt, например, так:</p>
+
 {% highlight bash %}
 sed 's/clang\\/qt-5-2-0\\/g' -i ~/.config/QtProject/qbs.conf
 {% endhighlight %}
+
 <p>Альтернативные варианты - править файл вручную или воспользоваться <code>qbs-config-ui</code> или <code>qbs-config</code> на Ваш выбор.</p>
 <p>Так или иначе, нужный файл мы сгенерировали, сохраним его в будущей директории сборки:</p>
+
 {% highlight ini %}
 [General]
 
@@ -65,10 +71,12 @@ qutim\qbs\architecture=x86_64
 qutim\qbs\endianness=little
 qutim\qbs\toolchain=clang, llvm, gcc
 {% endhighlight %}
-<p><a href="/resources/docs/qutim-qt5-git/qbs-qutim.conf">qbs-qutim.conf</a></p>
 
-<h3><a name="patch" class="anchor" href="#patch"><span class="octicon octicon-link"></span></a>Готовим патч для исходников</h3>
+<p><a href="/resources/docs/qutim-qt5-git/qbs-qutim.conf" title="Файл" type="text/plain">qbs-qutim.conf</a></p>
+
+<h3><a href="#patch" class="anchor" name="patch"><span class="octicon octicon-link"></span></a>Готовим патч для исходников</h3>
 <p>Первая проблема - <code>clang</code> (по крайней мере, в Archlinux):</p>
+
 {% highlight diff %}
 diff -ruN qutim.orig/core/libqutim.qbs qutim/core/libqutim.qbs
 --- qutim.orig/core/libqutim.qbs    2014-01-06 15:39:56.000000000 +0400
@@ -83,7 +91,9 @@ diff -ruN qutim.orig/core/libqutim.qbs qutim/core/libqutim.qbs
          }
 
 {% endhighlight %}
+
 <p>И пофиксить сборку библиотеки для Vk:</p>
+
 {% highlight diff %}
 diff -ruN qutim.orig/protocols/vkontakte/vreen/vreen.qbs qutim/protocols/vkontakte/vreen/vreen.qbs
 --- qutim.orig/protocols/vkontakte/vreen/vreen.qbs  2014-01-06 15:41:42.000000000 +0400
@@ -97,9 +107,11 @@ diff -ruN qutim.orig/protocols/vkontakte/vreen/vreen.qbs qutim/protocols/vkontak
      property string vreen_version_major:  1
      property string vreen_version_minor: 9
 {% endhighlight %}
-<p><a href="/resources/docs/qutim-qt5-git/qutim-qbs-1.1.patch">qutim-qbs-1.1.patch</a></p>
 
-<h3><a name="sources" class="anchor" href="#sources"><span class="octicon octicon-link"></span></a>Получаем исходники</h3>
+<p><a href="/resources/docs/qutim-qt5-git/qutim-qbs-1.1.patch" title="Файл" type="text/plain">qutim-qbs-1.1.patch</a></p>
+
+<h3><a href="#sources" class="anchor" name="sources"><span class="octicon octicon-link"></span></a>Получаем исходники</h3>
+
 {% highlight bash %}
 # клонируем репозиторий
 git clone https://github.com/euroelessar/qutim
@@ -116,20 +128,25 @@ cd ..
 patch -p0 -i qutim-qbs-1.1.patch
 {% endhighlight %}
 
-<h2><a name="build" class="anchor" href="#build"><span class="octicon octicon-link"></span></a>Сборка</h2>
+<h2><a href="#build" class="anchor" name="build"><span class="octicon octicon-link"></span></a>Сборка</h2>
+
 {% highlight bash %}
 cd qutim
 HOME=$(pwd) qbs -j $(nproc) -d ../build release profile:qutim
 {% endhighlight %}
+
 <p>Я пытался сделать универсальный способ сборки пакета, поэтому такое странное переназначение домашней директории. Флаг <code>-j</code> указывает число потоков сборки, флаг <code>-d</code> директорию сборки, <code>release</code> тип сборки (debug, release), <code>profile</code> используемый профиль, описанный в файле настроек.</p>
 
-<h2><a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Установка</h2>
+<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Установка</h2>
+
 {% highlight bash %}
 HOME=$(pwd) sudo qbs install -d ../build --install-root "/usr" profile:qutim
 {% endhighlight %}
+
 <p>Из нового - указание корневого каталога (<code>--install-root</code>). Без этого пакет будет установлен в <code>/</code> (<code>/bin</code> и <code>/lib</code>).</p>
 
-<h2><a name="pkgbuild" class="anchor" href="#pkgbuild"><span class="octicon octicon-link"></span></a>PKGBUILD</h2>
+<h2><a href="#pkgbuild" class="anchor" name="pkgbuild"><span class="octicon octicon-link"></span></a>PKGBUILD</h2>
+
 {% highlight bash %}
 pkgname=qutim-qt5-git
 _gitname=qutim
@@ -182,4 +199,5 @@ package() {
   HOME="${srcdir}" qbs install -d ../build --install-root "${pkgdir}/usr" profile:qutim
 }
 {% endhighlight %}
-<p><a href="/resources/docs/qutim-qt5-git/PKGBUILD">PKGBUILD</a></p>
+
+<p><a href="/resources/docs/qutim-qt5-git/PKGBUILD" title="Файл" type="text/plain">PKGBUILD</a></p>
