--- a/ru/_posts/2014-03-06-site-changes.html
+++ b/ru/_posts/2014-03-06-site-changes.html
@@ -8,16 +8,19 @@ title: Изменения сайта
 short: site-changes
 description: Решил немного поиграться с сайтом. Краткий список изменений ниже.
 ---
-<h2><a name="list" class="anchor" href="#list"><span class="octicon octicon-link"></span></a>Cписок изменений:</h2>
+<h2><a href="#list" class="anchor" name="list"><span class="octicon octicon-link"></span></a>Cписок изменений:</h2>
 <ul>
-  <li>Арендовал домен <code>arcanis.name</code>. Теперь, как и все белые люди, имею нормальный адрес. Небольшое описание (мне, как человеку далекому от интернет-технологий, пришлось немного попариться на эту тему). Арендуем домен, подключаем услугу редактирования DNS (для Ru-center <a href="http://www.nic.ru/dns/service/dns_hosting/">DNS-master</a>) - суммарно мне обошлось около 1100 рублей/год. Кладем в наш репозиторий с сайтом файл CNAME, содержащий имя желаемого домена. Идем и добавляем две записи в DNS для нашего домена:
+  <li>Арендовал домен <code>arcanis.name</code>. Теперь, как и все белые люди, имею нормальный адрес. Небольшое описание (мне, как человеку далекому от интернет-технологий, пришлось немного попариться на эту тему). Арендуем домен, подключаем услугу редактирования DNS (для Ru-center <a href="http://www.nic.ru/dns/service/dns_hosting/" title="Сервис">DNS-master</a>) - суммарно мне обошлось около 1100 рублей/год. Кладем в наш репозиторий с сайтом файл CNAME, содержащий имя желаемого домена. Идем и добавляем две записи в DNS для нашего домена:
+
 {% highlight bash %}
 @    A   192.30.252.153
 @    A   192.30.252.154
 # перенаправление с www.*
 www CNAME   @
 {% endhighlight %}
+
 (<code>@</code> значит наш корневой домен.) Ждем пару часов. Результат можно узнать примерно так:
+
 {% highlight bash %}
 $ dig domain.name +nostats +nocomments +nocmd
 ; <<>> DiG 9.9.2-P2 <<>> domain.name +nostats +nocomments +nocmd
@@ -27,8 +30,10 @@ domain.name.           912     IN      A       192.30.252.153
 domain.name.           912     IN      A       192.30.252.154
 ...
 {% endhighlight %}</li>
-  <li>На радостях создал <a href="ftp://repo.arcanis.name/repo">собственный репозиторий</a>, в котором будут лежать некоторые пакеты из AUR, которые я использую. Планируется поддержка обеих архитектур.</li>
+
+  <li>На радостях создал <a href="ftp://repo.arcanis.name/repo" title="Репозиторий">собственный репозиторий</a>, в котором будут лежать некоторые пакеты из AUR, которые я использую. Планируется поддержка обеих архитектур.</li>
   <li>Поскольку репозиторий требует ftp, то перевел samba на ftp. Проблему доступа решил опциями монтирования:
+
 {% highlight bash %}
 # только чтение
 /home/arcanis/music                         /srv/ftp/music  ext4    defaults,bind,ro   0 0
@@ -36,8 +41,9 @@ domain.name.           912     IN      A       192.30.252.154
 # чтение и запись (файл ограничен 2 Гб)
 /home/arcanis/share.fs                      /srv/ftp/share  ext4    defaults,rw   0 0
 {% endhighlight %}
-Для отсутствия доступа извне к директории с музыкой, используется логин под специальным пользователем и ограничение <code>anon_world_readable_only=YES</code>.
-Также привожу свой файл настроек <code>/etc/vsftpd.conf</code>:
+
+Для отсутствия доступа извне к директории с музыкой, используется логин под специальным пользователем и ограничение <code>anon_world_readable_only=YES</code>. Также привожу свой файл настроек <code>/etc/vsftpd.conf</code>:
+
 {% highlight bash %}
 anonymous_enable=YES
 anon_root=/srv/ftp
@@ -58,10 +64,13 @@ chroot_local_user=YES
 local_root=/srv/ftp/music
 listen=YES
 {% endhighlight %}
+
 Теперь добавим переадресацию с <code>repo.arcanis.name</code> на нужный IP адрес. Для этого внесем следующие записи в DNS:
+
 {% highlight bash %}
 repo   A   89.249.170.38
 {% endhighlight %}
+
   </li>
   <li>В ближайшее время (как дойду до магазина с деньгами) планируется приобретение небольшого сервера для работы на постоянной основе (компиляция пакетов, репозиторий, файлообмен, бэкапы).</li>
 </ul>
