add reportabug pages and fix typo

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -6,7 +6,7 @@ short: git-etc
 hasgui: true
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
     - Archlinux <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR package</a>
