--- a/projects/index.html
+++ b/projects/index.html
@@ -94,6 +94,13 @@ groups:
                 - <a href="https://github.com/arcan1s/netctlplasmoid" title="GitHub">GitHub repo</a>
                 - Page on <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
                 - <a href="https://aur.archlinux.org/packages/netctl-gui" title="AUR">Archlinux AUR package</a>
+          - title: Report a Bug
+            short: reportabug
+            description: Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="https://github.com" title="GitHub">GitHub</a> or <a href="https://gitreports.com/" title="GitReports">GitReport</a>.
+            links:
+                - <a href="/projects/reportabug" title="Homepage">Homepage</a>
+                - <a href="https://github.com/arcan1s/reportabug" title="GitHub">GitHub repo</a>
+
 ---
   <body>
     <div class="wrapper">
