--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -6,7 +6,7 @@ short: pytextmonitor
 hasgui: true
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
     - Ernesto Avilés Vzqz (Spanish translation)
     - Mermouy (French translation)
     - underr (Brazillian Portuguese translation)
