--- a/projects/queued.html
+++ b/projects/queued.html
@@ -6,7 +6,7 @@ short: queued
 hasgui: false
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
 ---
