--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -7,7 +7,7 @@ short: git-etc
 hasgui: true
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
     - Пакет в <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR</a>
