--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -95,6 +95,12 @@ groups:
                 - <a href="https://github.com/arcan1s/netctl-gui" title="GitHub">Репозиторий на GitHub</a>
                 - <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">Страница на kde-apps.org</a>
                 - <a href="https://aur.archlinux.org/packages/netctl-gui" title="AUR">Пакет в AUR</a>
+          - title: Report a Bug
+            short: reportabug
+            description: Приложение/библиотека, написанное на Qt, которое позволяет пользователям отправлять багрепорт для проектов, расположенных на GitHub. Оно может работать как через <a href="https://github.com" title="GitHub">GitHub</a>, так и через <a href="https://gitreports.com" title="GitReports">GitReports</a>.
+            links:
+                - <a href="/ru/projects/reportabug" title="Homepage">Домашняя страница</a>
+                - <a href="https://github.com/arcan1s/reportabug" title="GitHub">Репозиторий на GitHub</a>
 ---
   <body>
     <div class="wrapper">
