--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -7,7 +7,7 @@ short: netctl-gui
 hasgui: true
 hasdocs: true
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
     - Страница на <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
