--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -7,7 +7,7 @@ short: pytextmonitor
 hasgui: true
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
     - Ernesto Avilés Vzqz (перевод на испанский)
     - Mermouy (перевод на французский)
     - underr (перевод на бразильский португальский)
