--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -6,7 +6,7 @@ short: netctl-gui
 hasgui: true
 hasdocs: true
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
     - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
