--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -6,7 +6,7 @@ short: oblikuestrategies
 hasgui: true
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPL
 links:
     - Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">kde-look.org</a>
