--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -7,7 +7,7 @@ short: queued
 hasgui: false
 hasdocs: false
 developers:
-    - Evgeniy Alelseev
+    - Evgeniy Alekseev
 license: GPLv3
 links:
 ---
