add support of meta keywords

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: git-etc
 short: git-etc
+tags: git, python, qt, linux, daemon, system
 hasgui: true
 hasdocs: false
 developers:
@@ -148,11 +149,11 @@ systemctl restart git-etc
   </tr>
   <tr>
     <th>IGNORELIST</th>
-    <td><p>List of files that will not be observed. Separator is ";;". May be empty.</td>
+    <td><p>List of files that will not be observed. Separator is ";;". May be empty.</p></td>
   </tr>
   <tr>
     <th>FORALL</th>
-    <td><p><code>1</code> will enable access for normal user. Default is <code>1</code>.</td>
+    <td><p><code>1</code> will enable access for normal user. Default is <code>1</code>.</p></td>
   </tr>
 </table>
 <!-- end of config block -->
