--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: Netctl GUI
 short: netctl-gui
+tags: archlinux, c++, qt, network, kde, netctl, system, dbus, library
 hasgui: true
 hasdocs: true
 developers:
