--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: Oblikue strategies
 short: oblikuestrategies
+tags: qt, c++, kde, linux, fun
 hasgui: true
 hasdocs: false
 developers:
