--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: py-text-monitor
 short: pytextmonitor
+tags: python, kde, qt, linux, system, awesome
 hasgui: true
 hasdocs: false
 developers:
