--- a/projects/queued.html
+++ b/projects/queued.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: queued
 short: queued
+tags: linux, shell, daemon, system
 hasgui: false
 hasdocs: false
 developers:
