--- a/projects/reportabug.html
+++ b/projects/reportabug.html
@@ -3,6 +3,7 @@ hastr: true
 layout: project
 title: Report a Bug
 short: reportabug
+tags: qt, c++, library, development
 hasgui: false
 hasdocs: true
 developers:
