--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: git-etc
 short: git-etc
+tags: git, python, qt, linux, system, демон
 hasgui: true
 hasdocs: false
 developers:
@@ -160,7 +161,8 @@ systemctl restart git-etc
 
 <!-- gui block -->
 <h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Графический интерфейс</h2>
-<p>Control Config (<code>ctrlconf</code>) - графический интерфейс для <code>git-etc</code>, написанный на <code>Python2/PyQt4</code>. Данное приложение позволяет Вам увидеть список коммитов и изменения в файлах в данных коммитах. Также данное приложение позволит Вам откатиться на указанный коммит (все файлы, посредством <code>git reset --hard</code>, или только указанный, посредством <code>git diff && git apply</code>). Также Вы можете объединить старый и новый конфигурационные файлы (используются две ветки репозитория master и experimental). Приложение может потребовать привелегии root, убедитесь, что пакет <code>sudo</code> установлен.</p>
+<p>Control Config (<code>ctrlconf</code>) - графический интерфейс для <code>git-etc</code>, написанный на <code>Python2/PyQt4</code>. Данное приложение позволяет Вам увидеть список коммитов и изменения в файлах в данных коммитах. Также данное приложение позволит Вам откатиться на указанный коммит (все файлы, посредством <code>git reset --hard</code>, или только указанный, посредством <code>git diff && git apply</code>). Также Вы можете объединить старый и новый конфигурационные файлы (используются две
+ветки репозитория master и experimental). Приложение может потребовать привелегии root, убедитесь, что пакет <code>sudo</code> установлен.</p>
 
 <h3><a href="#gui_configuration" class="anchor" name="gui_configuration"><span class="octicon octicon-link"></span></a>Настройка</h3>
 <p>Запустите приложение и откройте окно настроек из меню.</p>
