--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: Netctl GUI
 short: netctl-gui
+tags: archlinux, c++, qt, сеть, kde, netctl, система, dbus, библиотека
 hasgui: true
 hasdocs: true
 developers:
