--- a/ru/projects/oblikuestrategies.html
+++ b/ru/projects/oblikuestrategies.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: Oblikue strategies
 short: oblikuestrategies
+tags: qt, c++, kde, linux, досуг
 hasgui: true
 hasdocs: false
 developers:
