--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: py-text-monitor
 short: pytextmonitor
+tags: python, kde, qt, linux, система, awesome
 hasgui: true
 hasdocs: false
 developers:
