--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: queued
 short: queued
+tags: linux, shell, демон, система
 hasgui: false
 hasdocs: false
 developers:
