--- a/ru/projects/reportabug.html
+++ b/ru/projects/reportabug.html
@@ -4,6 +4,7 @@ hastr: true
 layout: project
 title: Report a Bug
 short: reportabug
+tags: qt, c++, библиотека, разработка
 hasgui: false
 hasdocs: true
 developers:
